<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_banner2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/chef_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/chef" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/size"
        android:layout_marginLeft="8dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_grey"
        android:layout_marginTop="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

        <RadioButton
            android:id="@+id/size1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radioPrice"
            android:text="@string/munch" />
    <RadioButton
        android:id="@+id/size2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="radioPrice"
        android:text="@string/hungry" />
    <RadioButton
        android:id="@+id/size3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="radioPrice"
        android:text="@string/horse" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp">

        <TextView
            android:id="@+id/toppings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/toppings"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/toppings" />
    </LinearLayout>

    <TextView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_grey"
        android:layout_marginTop="4dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClick"
            android:text="@string/cheese" />
        <CheckBox
            android:id="@+id/pepperoni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClick"
            android:text="@string/pepporoni" />
        <CheckBox
            android:id="@+id/chicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClick"
            android:text="@string/chicken" />
        <CheckBox
            android:id="@+id/beef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClick"
            android:text="@string/beef" />
        <CheckBox
            android:id="@+id/bacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClick"
            android:text="@string/bacon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/olives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClick"
            android:text="@string/olives" />
        <CheckBox
            android:id="@+id/pineapple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClick"
            android:text="@string/pineapple" />
        <CheckBox
            android:id="@+id/mushroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClick"
            android:text="@string/mushroom" />
        <CheckBox
            android:id="@+id/capsicum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClick"
            android:text="@string/capsicum" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp">
        <TextView
        android:id="@+id/crust"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/crust"
        android:textStyle="bold"/>
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/pizza_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/light_grey"
        android:layout_marginTop="2dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
        <RadioButton
            android:id="@+id/crust1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radioPrice"
            android:text="@string/thin" />
        <RadioButton
            android:id="@+id/crust2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radioPrice"
            android:text="@string/sicillian" />

        <RadioButton
            android:id="@+id/crust3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="radioPrice"
            android:text="@string/stuffed" />
    </LinearLayout>

    <TextView
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/light_grey"
        android:layout_marginTop="2dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        android:id="@+id/orderLayout">
        <TextView
            android:id="@+id/pan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/pizza_small" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/toppingPizza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Toppings: " />
                    <TextView
                        android:id="@+id/toppingSelect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/crustPizza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Crust: " />
                    <TextView
                        android:id="@+id/crustSelect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Order" />
    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>